# real_world_ocaml

./: .env  Makefile  real_world.opam
lib/: comp.ml  dune  err.ml  freq.ml  funct.ml  ls_assoc.ml  main.ml  map_counter.ml  map_example.ml  run.ml  typ.ml
lib/sub/: dune
test/: dune  test.ml
