opam-version: "2.0"
name: "real_world"
version: "1.0.0"
maintainer: "Michel Perez <michel.ingesoft@gmail.com>"
authors: ["Michel Perez <michel.ingesoft@gmail.com>"]
homepage: ""
bug-reports: ""
dev-repo: ""
license: ["ISC"]
tags: []
build: [["dune" "build" "-p" name "-j" jobs]]
build-test: [["dune" "runtest" "-p" name "-j" jobs]]
depends: [
  "dune" {build}
  "core" {>= "0.11.1"}
  "lwt" {>= "4.0.0"}
  "lwt_ppx" {>= "1.2.0"}
  "csv" {>= "2.0"}
  "qcheck" {>= "0.8"}
]
